b=337424, unloaded part of image drawn black when top is above visible region; patch from prefiks@aviary.pl, r=vlad